k8s/platform/boundary/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boundary
  labels:
    name: boundary
    purpose: access-management
